--- a/style/menu_dropdown.css
+++ b/style/menu_dropdown.css
@@ -3,6 +3,12 @@
   font-size: 0.8rem !important;
 }
 
+.jp-EodagWidget-menuItem.selectable {
+  pointer-events: auto !important;
+  user-select: text !important;
+  cursor: text !important;
+}
+
 .jp-EodagWidget-menuItem > svg {
   width: 1.25rem;
   height: 1.25rem;
